[tool.poetry]
name = "flight-scanner"
version = "0.1.0"
description = "Flight scanner for finding cheap flights with stopovers"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
python-dotenv = "^1.2.1"
datasets = "^4.4.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
